--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,6 +26,10 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.125.0
+MYAPP_UPLOAD_STORE_FILE=brush.keystore
+MYAPP_UPLOAD_KEY_ALIAS=brush
+MYAPP_UPLOAD_STORE_PASSWORD=mynois2255
+MYAPP_UPLOAD_KEY_PASSWORD=mynois2255
 
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
