--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-update-gradle": "^1.2.0",
     "react-native-vector-icons": "^9.1.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
